--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moroccan-bac-calculator",
-  "version": "1.0.0",
+  "version": "1.4.0",
   "description": "A Moroccan baccalaureate average calculator web app.",
   "license": "MIT",
   "author": "Mohamed Driou",
@@ -29,7 +29,11 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "version:patch": "npm version patch -m 'Bump version to %s'",
+    "version:minor": "npm version minor -m 'Bump version to %s'",
+    "version:major": "npm version major -m 'Bump version to %s'",
+    "postversion": "git push && git push --tags"
   },
   "browserslist": [
     ">0.2%",
