--- a/package.json
+++ b/package.json
@@ -33,13 +33,10 @@
     "vite": "^5.0.11"
   },
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "version:patch": "npm version patch -m 'Bump version to %s'",
-    "version:minor": "npm version minor -m 'Bump version to %s'",
-    "version:major": "npm version major -m 'Bump version to %s'",
-    "postversion": "git push && git push --tags"
+    "version:patch": "git pull --tags && npm version patch -m 'Bump version to %s'",
+    "version:minor": "git pull --tags && npm version minor -m 'Bump version to %s'", 
+    "version:major": "git pull --tags && npm version major -m 'Bump version to %s'",
+    "postversion": "git push && git push --tags --force"
   },
   "browserslist": [
     ">0.2%",
