--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moroccan-bac-calculator",
-  "version": "1.4.10",
+  "version": "1.5.0",
   "description": "A Moroccan baccalaureate average calculator web app.",
   "license": "MIT",
   "author": "Mohamed Driou",
@@ -38,6 +38,7 @@
     "version:patch": "git pull --tags && npm version patch -m 'Bump version to %s'",
     "version:minor": "git pull --tags && npm version minor -m 'Bump version to %s'",
     "version:major": "git pull --tags && npm version major -m 'Bump version to %s'",
+    "version:custom": "echo 'Manually update version in package.json then run git tag v$(node -p \"require('./package.json').version\") && git push --tags'",
     "postversion": "git push && git push --tags --force"
   },
   "browserslist": [
