--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moroccan-bac-calculator",
-  "version": "1.9.4",
+  "version": "2.0.0",
   "description": "A Moroccan baccalaureate average calculator web app.",
   "license": "MIT",
   "author": "Mohamed Driou",
@@ -22,15 +22,18 @@
   },
   "dependencies": {
     "@livestore/adapter-web": "0.3.1",
+    "i18next": "^25.3.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-i18next": "^15.6.0"
   },
   "devDependencies": {
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
     "@vitejs/plugin-react": "^4.2.1",
     "typescript": "5.7.2",
-    "vite": "^5.0.11"
+    "vite": "^7.0.3"
   },
   "scripts": {
     "dev": "vite",
