--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,22 @@ pnpm-debug.log*
 # OS-specific files
 .DS_Store
 Thumbs.db
+
+
+# VS Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/extensions.json
+!.vscode/tasks.json
+!.vscode/launch.json
+*.code-workspace
+
+# Build files
+dist/
+.vite/
+
+# Dependencies
+node_modules/
+
+# Dependency directories
+node_modules/
