--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "react-i18next": "^15.6.0"
   },
   "devDependencies": {
-    "@types/react": "19.1.8",
-    "@types/react-dom": "19.1.6",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.2.1",
     "typescript": "5.7.2",
     "vite": "^7.0.3"
