--- a/src/netlify.toml
+++ b/src/netlify.toml
@@ -6,19 +6,22 @@
 [context.production.environment]
   VITE_APP_VERSION = "2.0.0"
 
-# Ensure static assets are served correctly
 [[headers]]
   for = "/*"
   [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
     Access-Control-Allow-Origin = "*"
-    Cache-Control = "public, max-age=3600"
 
-# Handle SPA routing and favicon
+[[headers]]
+  for = "/moroccan-bac-calculator.png"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+    Content-Type = "image/png"
+
 [[redirects]]
-  from = "/moroccan-bac-calculator.png"
+  from = "/favicon.ico"
   to = "/moroccan-bac-calculator.png"
   status = 200
-  force = true
 
 [[redirects]]
   from = "/*"
