--- a/package.json
+++ b/package.json
@@ -22,18 +22,20 @@
   },
   "dependencies": {
     "@livestore/adapter-web": "0.3.1",
-    "i18next": "^25.3.2",
+    "i18next": "^23.10.0",
     "i18next-browser-languagedetector": "^8.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-i18next": "^15.6.0"
+    "react-i18next": "^12.3.1",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
+    "@types/node": "^24.0.13",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.2.1",
     "typescript": "5.7.2",
-    "vite": "^7.0.3"
+    "vite": "^5.2.8"
   },
   "scripts": {
     "dev": "vite",
